# beldex

./: .drone.jsonnet  .drone.yml  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  Network Persistent State  QuotaManager  README.md  TransportSecurity  machineid  storage.json
Backups/: workspaces.json
Cache/Cache_Data/: 1721ac2f142f6f40_0  a97c96d98c7c4739_0  d121e2a6335b7510_0
CachedData/e18005f0f1b33c29e81d732535d8c0e47cafb0b5/: agent-6ab298bb4063228b4997a7e06045e95f.code  agent-7c6c9891866acfeedf4a3bd80dfcdc78.code  agent-b3e257b73fb0ddefc482da075a11c9cd.code  agent-c3609bba6d5b8b63e38117cba781bcf9.code  bindings-00baa1d4af37e3a4a2eaec6658fbb9fd.code  bindings-5c35bbd552baff105c096bbd26aa4028.code  clone-928124592f06f5c43c17ae75cc5ec9bf.code  common-23f99fac5afc81190e7d124ca0c1d13f.code  common-32f1e3dd0c8716ee6628b570cf4dee74.code  common-3483e620ee1427c8aad909335b696932.code  common-7e1fd52136a92e644bd087ea84f9f080.code  common-c899861038ecd840203dfa91cc0f5ca9.code  constants-0623f4e8289f4bf776038e8e3f079463.code  emmetNodeMain-a698ebedeafa3a5bf7a0e343d555e90c.code  (+68 more)
CachedExtensions/: builtin  user
Crashpad/: client_id
Local Storage/leveldb/: LOG  (+1 more)
Session Storage/: LOG  LOG.old
cmake/: StaticBuild.cmake
src/: CMakeLists.txt  beldex_economy.h  cryptonote_config.h  version.cpp.in  version.h
src/lws/src/: CMakeLists.txt  admin_main.cpp  error.cpp  error.h  http_server.h  options.h  rest_server.cpp  rest_server.h  scanner.cpp  scanner.h  server_main.cpp
src/lws/src/${HOME}/.beldex/light_wallet_server/: data.mdb
src/lws/src/db/: CMakeLists.txt  account.cpp  account.h  storage.cpp  storage.h
src/lws/src/rpc/: CMakeLists.txt  client.h  daemon_zmq.cpp  light_wallet.h
src/lws/src/util/: CMakeLists.txt  gamma_picker.cpp  gamma_picker.h  http_server.h  random_outputs.h
src/lws/src/wire/: CMakeLists.txt  error.cpp  fwd.h  json.h  read.cpp  read.h  write.h
src/lws/src/wire/json/: CMakeLists.txt  base.h  error.h  new.h  read.h  write.cpp  write.h
tests/: CMakeLists.txt  README.md
translations/: monero_fr.ts  monero_it.ts  monero_sv.ts
(+314 files in other folders)
